used @supports for avoid-wrap so that it works with supporting browsers

--- a/_sass/_modules.scss
+++ b/_sass/_modules.scss
@@ -92,8 +92,12 @@
 }
 
 .avoid-wrap {
-    //text-wrap: avoid; //css3
-    white-space: nowrap;
+    @supports(text-wrap: avoid) {
+        text-wrap: avoid;
+    }
+    @supports(not(text-wrap: avoid)) {
+        white-space: nowrap;
+    }
 }
 
 .no-select {
